<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/routeFinderMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MapItemActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/bottomLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/pinMap"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pin"
                android:layout_centerInParent="true"
                android:visibility="visible"
                android:contentDescription="@string/pin" />

        </RelativeLayout>

    </fragment>


    <androidx.cardview.widget.CardView
            android:id="@+id/globeCv"
            android:layout_width="@dimen/card_icon_size_sm"
            android:layout_height="@dimen/card_icon_size_sm"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/white"
            android:layout_alignParentStart="true"
            android:layout_above="@id/bottomLayout"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="40dp"
        >
        <ImageView
            android:id="@+id/mapType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_globe"
            android:layout_gravity="center"
            android:contentDescription="@string/globe" />

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_map_height"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/area_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/text_title"
                android:textColor="@color/black"
                android:text="@string/place_name"
                android:maxLines="1"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/pickLocationBtn"/>
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_title"
                android:layout_below="@id/area_name"
                android:layout_alignParentStart="true"
                android:maxLines="3"
                android:layout_toStartOf="@+id/pickLocationBtn"/>

            <Button
                android:id="@+id/pickLocationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_location"
                android:textAllCaps="false"
                android:background="@drawable/round_btn_bg"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

    </LinearLayout>



</RelativeLayout>