<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">
        <ImageView
            android:layout_width="@dimen/source_location_icon_size"
            android:layout_height="@dimen/source_location_icon_size"
            android:src="@drawable/pin_g"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/starting_point"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/cardview_default_elevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_point"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="#073b4c"
                    />
                <TextView
                    android:id="@+id/select_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_starting_location"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/source_location_icon_size"
            android:layout_height="@dimen/source_location_icon_size"
            android:src="@drawable/pin_r"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/starting_point"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ending_point"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="#073b4c"
                    />
                <TextView
                    android:id="@+id/select_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_destination_location"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/findRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_route"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
</LinearLayout>









